--- a/CSS/queries.css
+++ b/CSS/queries.css
@@ -13,6 +13,11 @@
 }
 
 @media (max-width: 57em) {
+  .feature-info {
+    margin-top: 10rem;
+    padding-left: 0;
+    text-align: center;
+  }
   .section-hero {
     grid-template-columns: 1fr;
   }
@@ -64,11 +69,6 @@
   .searching::before,
   .sharing::before {
     top: 15%;
-  }
-  .feature-info {
-    margin-top: 15rem;
-    padding-left: 0;
-    text-align: center;
   }
   .section-features figure {
     place-items: center;
@@ -143,7 +143,7 @@
     align-items: center;
     position: absolute;
     bottom: 10%;
-    left: 45%;
+    left: 40%;
     z-index: 99999;
   }
   .header.open .links li a {
@@ -191,9 +191,14 @@
 }
 
 @media (max-width: 43em) {
+  .searching::before,
+  .sharing::before {
+    width: 50rem;
+    height: 43rem;
+  }
   .section-hero::before {
-    width: 37rem;
-    height: 23rem;
+    width: 39rem;
+    height: 22rem;
     right: -30%;
     top: 15%;
   }
@@ -203,14 +208,20 @@
   .section-contact {
     padding: 4.8rem 0 3.2rem;
   }
+  .grid--1-col-accordion {
+    grid-template-columns: 1fr;
+  }
 }
 
 @media (max-width: 38em) {
+  .container {
+    padding: 3.2rem 4.8rem 0;
+  }
   .bookmarking::before,
   .searching::before,
   .sharing::before {
     width: 46rem;
-    height: 24rem;
+    height: 20rem;
   }
   .hero-title {
     font-size: 3.2rem;
@@ -228,17 +239,16 @@
   }
   footer .icons {
     display: flex;
-    margin-top: 4.8rem;
+    margin: 4.8rem 0;
     margin-right: 0;
   }
 }
 
 @media (max-width: 33em) {
-  .bookmarking::before,
   .searching::before,
   .sharing::before {
     width: 37rem;
-    height: 18rem;
+    height: 27rem;
   }
   .hero-title {
     font-size: 2.4rem;
